--- a/Labo 31/CMakeLists.txt
+++ b/Labo 31/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Labo_31)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Labo_31 main.cpp Uint.cpp SUint.cpp SUint.h)
+add_executable(Labo_31 main.cpp Uint.cpp SUint.cpp SUint.h Uint.h)
